@@ -246,6 +246,8 @@ int     yflag;          /*      -y, enable SDCC Debug Symbols
                          */
 int     zflag;          /*      -z, disable symbol case sensitivity
                          */
+int     waddrmode;      /*      WORD Address mode flag
+                         */
 int     a_bytes;        /*      REL file T Line address length
                          */
 a_uint  a_mask;         /*      Address Mask
