@@ -661,26 +661,8 @@ cheapMove (const asmop *result, int roffset, const asmop *source, int soffset, b
     }
   else if (source->type == AOP_CODE && aopInReg (result, roffset, A_IDX))
     {
-      if (soffset == 0 /* TODO: ALWAS USE THIS WHEN ASSEMBLER / LINKER GETS SUPPRT FOR OFFSET AT CALL! */)
-        {
-          emit2 ("call", "%s+%d", source->aopu.aop_dir, soffset);
-          cost (1, 4);
-        }
-      else
-        {
-          emit2 ("mov", "a, #<(%s+0)", source->aopu.aop_dir);
-          emit2 ("mov", "p, a");
-          emit2 ("mov", "a, #>(%s+0x8000+0)", source->aopu.aop_dir);
-          cost (3, 3);
-          for (int i = 0; i < soffset; i++)
-            {
-              emit2 ("inc", "p");
-              emit2 ("addc", "a");
-              cost (2, 2);
-            }
-          emit2 ("call", "__gptrget");
-          cost (1, 14);
-        }
+      emit2 ("call", "%s+%d", source->aopu.aop_dir, soffset);
+      cost (1, 4);
     }
   else if (source->type == AOP_STK && aopInReg (result, roffset, A_IDX))
     {
@@ -2670,7 +2652,7 @@ genPointerGet (const iCode *ic)
 
   wassertl (aopIsLitVal (right->aop, 0, 2, 0x0000), "Unimplemented nonzero right operand in pointer read");
 
-  if (left->aop->type == AOP_IMMD && (ptype == POINTER /*|| ptype == CPOINTER - TODO: ENABLE WHEN ASSEMBLER / LINKER SUPPORTS OFFSET AT CALL*/))
+  if (left->aop->type == AOP_IMMD && (ptype == POINTER || ptype == CPOINTER))
     {
       for (int i = 0; !bit_field ? i < size : blen > 0; i++, blen -= 8)
         {
